# shanks

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
crates/shanks_cli/: Cargo.toml
crates/shanks_cli/src/: cli.rs  debug.rs  lib.rs  play.rs
crates/shanks_core/: Cargo.toml
crates/shanks_core/src/board/: backend.rs  board.rs  gamestate.rs  mod.rs  piece.rs  ply.rs  square.rs
crates/shanks_core/src/board/backend/: bitboard.rs
crates/shanks_engine/: Cargo.toml
crates/shanks_engine/src/: engine.rs  lib.rs  static_eval.rs
crates/shanks_util/: Cargo.toml
crates/shanks_util/src/: bitfield.rs  lib.rs
src/: main.rs
