[package]
name = "shanks_cli"
version = "0.1.0-dev"
edition = "2021"
description = "The Cli for the Shanks Checkers engine."
keywords = ["shanks"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xkonsti/shanks"
rust-version = "1.89.0"
authors = ["Konstantin Opora <konstantinopora@gmail.com"]

[dependencies]
shanks_core = { path = "../shanks_core", version = "0.1.0-dev" }
shanks_engine = { path = "../shanks_engine", version = "0.1.0-dev" }

clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]

[lib]
name = "shanks_cli"
path = "src/lib.rs"

