[package]
name = "shanks_util"
version = "0.1.0-dev"
edition = "2021"
description = "A utility library for the Shanks Checkers engine."
keywords = ["shanks"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xkonsti/shanks"
rust-version = "1.89.0"
authors = ["Konstantin Opora <konstantinopora@gmail.com"]

[dependencies]

[dev-dependencies]

[lib]
name = "shanks_util"
path = "src/lib.rs"

